upgrade to vue 3.0

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="toc-container"></div>
     <script src="static/js/build.js"></script>
   </body>
 </html>
