--- a/static/guitar-chord/index.html
+++ b/static/guitar-chord/index.html
@@ -58,12 +58,12 @@
           ditto.sidebar_file = "sidebar.md",
 
           // optional settings if you want github search
-          ditto.github_username = "xing393939";   // <------- EDIT ME!!
-          ditto.github_repo = "xing393939.github.io";        // <------- EDIT ME!!
-          ditto.highlight_code = false;       // <------- EDIT ME!!
+          ditto.github_username = "xing393939";
+          ditto.github_repo = "xing393939.github.io";
+          ditto.highlight_code = false;
 
           // where the docs are actually stored on github - so you can edit
-          ditto.base_url = "https://github.com/xing393939/xing393939.github.io/edit/master/static/vendor/guitar-chord";
+          ditto.base_url = "https://github.com/xing393939/xing393939.github.io/tree/master/static/guitar-chord";
 
           // run
           ditto.run();
