--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
   <body>
     <div id="app"></div>
     <script src="static/js/build.js"></script>
+    <script type="text/javascript">
+      function disqus() {
+        if (typeof DISQUS !== 'object') {
+          (function () {
+            var s = document.createElement('script');
+            s.async = true;
+            s.type = 'text/javascript';
+            s.src = '//xing393939.disqus.com/embed.js';
+            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+          }());
+        }
+      }
+    </script>
   </body>
 </html>
