--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>往事随风</title>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-    <link rel="icon" href="static/image/logo.png" type="image/x-icon">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="static/js/build.js"></script>
-    <script type="text/javascript">
-      function disqus() {
-        if (typeof DISQUS !== 'object') {
-          (function () {
-            var s = document.createElement('script');
-            s.async = true;
-            s.type = 'text/javascript';
-            s.src = '//xing393939.disqus.com/embed.js';
-            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-          }());
-        }
-      }
-    </script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>往事随风</title>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+  <link rel="icon" href="static/image/logo.png" type="image/x-icon">
+</head>
+
+<body>
+  <div id="app"></div>
+  <script src="static/js/build.js"></script>
+  <script type="text/javascript">
+    function disqus(url, title) {
+      window.disqus_config = function () {
+        this.page.url = url;
+        this.page.identifier = url;
+        this.page.title = title;
+      };
+
+      (function () {
+        var d = document, s = d.createElement('script');
+        s.src = '//xing393939.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+    }
+  </script>
+</body>
 </html>
