--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         this.page.title = title;
       };
 
-      if (DISQUS) {
+      if (typeof DISQUS == 'object') {
         DISQUS.reset({
           reload: true,
           config: disqus_config
