--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       }
 
       (function () {
-        var d = document, s = d.createElement('script');
-        s.src = '//xing393939.disqus.com/embed.js';
+        var s = document.createElement('script');
+        s.async = true;
         s.type = 'text/javascript';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-      })();
+        s.src = '//xing393939.disqus.com/embed.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+      }());
     }
   </script>
 </body>
