--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
   <script src="static/js/build.js"></script>
   <script type="text/javascript">
     function disqus(url, title) {
+      window.disqus_config = function () {
+        this.page.url = 'https://xing393939.github.io/' + url;
+        this.page.identifier = url;
+        this.page.title = title;
+      };
+
       if (typeof DISQUS == 'object') {
         DISQUS.reset({
           reload: true,
-          config: function () {
-            this.page.url = url;
-            this.page.identifier = url.replace(/[^\w_]/g, '');
-            this.page.title = title;
-          }
+          config: disqus_config
         })
         return
       }
