--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         var s = document.createElement('script');
         s.async = true;
         s.type = 'text/javascript';
-        s.src = '//xing393939.disqus.com/embed.js';
+        s.src = 'https://bye04t46if.execute-api.ap-southeast-1.amazonaws.com/default/Web?url=https://xing393939.disqus.com/embed.js';
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
       }());
     }
